--- a/css/twitter.css
+++ b/css/twitter.css
@@ -1,31 +1,26 @@
 @media only screen and (min-width: 700px) {
-  section div#Timeline a {
-    color: var(--color-link);
+  section div#Timeline a:any-link {
+    color: var(--color-link-active);
     text-decoration-thickness: 1.5px;
     text-underline-offset: 1px;
     font-weight: 600;
 
-    &:hover,
-    &:focus-visible {
-      color: var(--color-link-hover);
+    &:hover {
+      color: var(--color-link);
     }
+  }
 
-    &:active {
-      color: var(--color-link-active);
+  a#NG-link {
+    color: orangered !important;
+
+    &:hover {
+      color: rgb(255, 111, 16) !important;
     }
+  }
 
-    &:visited {
-      color: var(--color-link-dark-visited);
 
-      &:hover,
-      &:focus-visible {
-        color: var(--color-link-dark-visited-hover);
-      }
-
-      &:active {
-        color: var(--color-link-dark-visited-active);
-      }
-    }
+  .pinned {
+    
   }
 
   span img {
@@ -40,6 +35,7 @@
 
   ul {
     list-style-type: disc;
+    margin: 0;
   }
 
   div#Timeline {
@@ -97,9 +93,17 @@
       max-width: 506px;
       padding-right: 50px;
       padding-bottom: 10px;
+
+      p {
+        color: black;
+        font-size: 17px;
+        line-height: 20px;
+        margin: 0;
+        padding: 0;
+      }
     }
 
-    ul.tweet-text {
+    ul {
       padding-left: 20px;
     }
 
@@ -190,9 +194,19 @@
 
     cursor: help;
   }
-}
 
-/* ------------------------------------------- */
+  .pin-icon {
+    position: absolute;
+    top: 12px;
+    right: 170px;
+    width: 16px;
+    height: 16px;
+    transform: rotate(45deg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%2371767A' stroke-width='1.8' stroke-linecap='round' stroke-linejoin='round'><path d='M12 17v5'/><path d='M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z'/></svg>");
+  }
+}
 
 @media only screen and (max-width: 700px) {
   section div#Timeline a {
