--- a/css/variables.css
+++ b/css/variables.css
@@ -174,8 +174,8 @@
 @font-face {
   font-family: "NewGrounds";
   src: url("/src/asset/font/NG/NewgroundsFontRegular.woff2") format("woff2"),
-  url("/src/asset/font/NG/NewgroundsFontRegular.woff") format("woff"),
-  url("/src/asset/font/NG/NewgroundsFont-Regular.otf")   format("opentype");
+    url("/src/asset/font/NG/NewgroundsFontRegular.woff") format("woff"),
+    url("/src/asset/font/NG/NewgroundsFont-Regular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -262,4 +262,11 @@
   --font-mono: "departure-mono";
   --font-jb-mono: "JetBrainsMono";
   --font-ng: "NewGrounds";
+}
+
+.no-select {
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none;
 }
